--- a/X_Ray_pneumonia_detection.ipynb
+++ b/X_Ray_pneumonia_detection.ipynb
@@ -34,7 +34,7 @@
       "source": [
         "# Description\n",
         "\n",
-        "Big thanks to FlorianWoelki for this.  \n",
+        "Big thanks to FlorianWoelki and Anjana Tiha for the backbone to this.  \n",
         "\n",
         "In this example we are going to use transfer learning to detect pneumonia in x-ray images. In order to achieve this we will retrain the inception 3 image classifier on a pneumonia dataset using Tensorflow and Keras."
       ]
